--- a/output/paper/paper.tex
+++ b/output/paper/paper.tex
@@ -27,7 +27,7 @@
 \begin{titlingpage}
     \maketitle
     \begin{abstract}
-        The new corona virus disease --- COVID-2019 --- is rapidly spreading through the world. The availability of unbiased timely statistics of trends in disease events are a key to effective responses. But due to reporting delays, the most recently reported numbers are frequently underestimating of the total number of infections, hospitalizations and deaths creating an illusion of a downward trend. Here we describe a statistical methodology for predicting the actual daily number occurring events a specific day, and its uncertainty, based on the daily reported event frequency. The methodology takes into account the observed distribution pattern of the delay and can be derived from the ``removal method'', a well-established method in the field of ecology.
+        The new corona virus disease --- COVID-2019 --- is rapidly spreading through the world. The availability of unbiased timely statistics of trends in disease events are a key to effective responses. But due to reporting delays, the most recently reported numbers are frequently underestimating of the total number of infections, hospitalizations and deaths creating an illusion of a downward trend. Here we describe a statistical methodology for predicting true daily quantities and their uncertainty, estimated using historical reporting delays. The methodology takes into account the observed distribution pattern of the lag. It is derived from the ``removal method'', a well-established estimation framework in the field of ecology.
 	\end{abstract}
 
 	\noindent Keywords:
@@ -39,18 +39,22 @@
 \mainmatter%
 
 \chapter{Pandemic response demands timely data}
-The new corona virus pandemic is affecting societies all around the world. As countries are challenged to control and fight back, they are in need of timely, unbiased, data for monitoring trends and making fast and well-informed decisions (\cite{No_author_2020_coronavirus_three}). Official statistics are usually reported with long delay after thorough verification, but in the midst of a deadly pandemic, real time data is of critical importance for policymakers (\cite{Jajosky2004_evaluation_reporting}). The latest data are often not finalized, but change as new statistics are reported. In fact, since these updates are usually in the form of delayed reporting. Since the most recent days then have the least cases, such systematic under reporting gives the dangerous picture of an always improving situation.
+The new corona virus pandemic is affecting societies all around the world. As countries are challenged to control and fight back, they are in need of timely, unbiased, data for monitoring trends and making fast and well-informed decisions (\cite{No_author_2020_coronavirus_three}). Official statistics are usually reported with long delay after thorough verification, but in the midst of a deadly pandemic, real time data is of critical importance for policymakers (\cite{Jajosky2004_evaluation_reporting}). The latest data are often not finalized, but change as new information is reported. In fact, reporting delays make the most recent days have the least cases accounted for, producing a dangerous illusion of an always improving outlook.
 
-Still, these unfinished statistics offer crucial information. If the pandemic is indeed slowing, we should not wait for the data to be finalized before using it. Rather, we argue that actual case counts and deaths should be nowcasted to account for any reporting delay and ensure policymakers are using the most accurate numbers available.
+Still, these unfinished statistics offer crucial information. If the pandemic is indeed slowing, we should not wait for the data to be finalized before using it. Rather, we argue that actual case counts and deaths should be nowcasted to account for reporting delay, thus allowing policymakers to use the latest numbers availiable without beinig misled by reporting bias.
 
 Such predictions provide an additional feature that is perhaps even more important. They explicitly model the uncertainty about these unknown quantities, ensuring that all users of these data have the same view of the current state of the epidemic.
 
-In this paper we describe a statistical methodology for nowcasting the epidemic statistics, such as hospitalizations or deaths, and the degree of uncertainty, based on the daily reported event frequency and the observed distribution pattern of the reporting delay. The prediction model is building on methods developed in ecology, referred to as the ``removal methods'' or ``capture-retain'' models (\cite{Pollock1991_review_papers}).
+In this paper we describe a statistical methodology for nowcasting the epidemic statistics, such as hospitalizations or deaths, and their degrees of uncertainty, based on the daily reported event frequency and the observed distribution pattern of reporting delays. The prediction model is building on methods developed in ecology, referred to as the ``removal method'' or ``capture-retain'' models (\cite{Pollock1991_review_papers}).
+
+To help motivate why such forecasting is needed, we now turn to the case of Sweden. The model is flexible by design, however, and could easily be applied to other countries as well.
 
 \section{The current situation of COVID-19 in Sweden}
-Each day at 14:00 the Swedish Public Health Agency holds a press conference where new COVID-19 statistics are presented\footnote{The data is then published on \url{https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/bekraftade-fall-i-sverige/} where we download it every day.}. Deaths is one of the main indicators to follow for understanding the impact of the pandemic on public health in Sweden, but also the number of new admissions to critical care, to hospitals, and the new confirmed cases are reported. One of the reasons for following these indicators is to enable public health professionals and the public to observe the patterns of the evolving, flattened or suppressed epidemic (\cite{Anderson2020_how_will}). In relation to policy, it is of further interest to understand if growth rates change, which could indicate a potential response. However, at the daily presentation only a proportion of the number deaths for each of the most recent days is yet known, and this bias causes an artificial, downward, trend in the data.
+The Swedish Public Health Agency updates the COVID-19 statistics daily\footnote{The data is published on \url{https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/bekraftade-fall-i-sverige/}.}. During a press conference, they present updates on the number of deaths, admissions to hosiptals and intensive care, as well as case counts.
 
-The death counts suffer from the longest reporting delay. In their daily presentation, the Swedish Public Health Agency warns for this by stopping the 7-day moving average trend line 10 days before the latest date. But not only are deaths often reported far further back than 10 days, a bar plot still shows the latest information from the most recent days creating a sense of a downward trend. In fact, this might be the reason why the number of deaths has been underestimated repeatedly. At the peak, deaths were initially believed to level out at around 60 per day, but after all cases had been reported more than two weeks later, the actual level was closer to 100 (\cite{Ohman2020_antalet_virusdoda}).
+One of the reasons for following these indicators is to enable public health professionals and the public to observe the evolving patterns of the epidemic (\cite{Anderson2020_how_will}). In relation to policy, it is of specific interest to understand if the growth rates changes, which could indicate the need for a policy response. However, in each daily report only a proportion of the number of recent deaths is yet known, and this bias produces the illusion of a downward trend.
+
+The death counts suffer from the longest reporting delay. In their daily press conference, the Swedish Public Health Agency warns for this by stopping the reported 7-day moving average trend line 10 days before the latest date. But not only are deaths often reported far further back than 10 days, a bar plot still shows the latest information, creating a sense of a downward trend. In fact, this might be the reason why the number of daily deaths have been underestimated repeatedly. At the peak, deaths were initially believed to level out at around 60 per day, but after all cases had been reported more than two weeks later, the actual number was close to 120 (\cite{Ohman2020_antalet_virusdoda}).
 
 \chapter{The removal method}
 We propose to use the removal method, developed in animal management (\cite{Pollock1991_review_papers}), to present an estimate of the actual frequencies at a given day and their uncertainty. The method has a long history dating back at least to the 1930s (\cite{Leslie1939_attempt_determine}). However, the first refined mathematical treatment of the method is credited to \cite{Moran1951_mathematical_theory}, more modern derivatives exits today (\cite{Matechou2016_open_models}). It is a commonly applied method today when analyzing age cohorts in fishery and wildlife management.
@@ -58,12 +62,13 @@ We propose to use the removal method, developed in animal management (\cite{Poll
 The removal method that has three major advantages over simply reporting moving averages:
 
 \begin{itemize}
-	\item it does not relay previous trend in the data;
-	\item we can generate confidence bounds for what is the reasonable range of the uncertainty in the event frequency at a given day;
-	\item the uncertainty in the estimate can be carried over to epidemiological models that uses the estimate as input, and hence give more realistic models.
+	\item it does not relay any previous trend in the data,
+	\item we can generate confidence bounds for the uncertainty about daily true frequencies,
+	\item the uncertainty estimates can be carried over to epidemiological models to help create more realistic models.
 \end{itemize}
 
-A classic example where the method proposed to solve this problem has been used is in estimating statistics of trapping a closed population of animals (\cite{Pollock1991_review_papers}). Each day the trapped animals are collected, and kept, and if there is no immigration the number of trapped animals the following days will, on average, decline. This pattern of declining number of trapped animals allows one to draw inference of the underlying population size. Here we replace the animal population with the true number of deaths, or cases, on a given day. Instead of traps we have the new reports of COVID--19 events. As the number of new reported deaths for a given day declines, we can draw inference on how many actually died that day. In fact, if we assume that the reporting structure is constant over time we can after a while quickly get good estimate of the actual number.
+A classic example where the method proposed to solve this problem has been used is in estimating statistics of trapping a closed population of animals (\cite{Pollock1991_review_papers}). Each day the trapped animals are collected, and kept, and if there is no immigration the number of trapped animals the following days will, on average, decline. This pattern of declining number of trapped animals allows one to draw inference of the underlying population size. Here we replace the animal population with the true number of deaths
+on a given day. Instead of traps we have the new reports of COVID--19 events. As the number of new reported deaths for a given day declines, we can draw inference on how many actually died that day. If we assume that the reporting structure is constant over time we can after a while quickly get good estimate of the actual number.
 
 Suppose for example that on day one, 4 individuals are reported dead for that day. On the second day, 10 deaths are recorded for day two. Then, with no further information, it is reasonable to assume that more people died on day two. If the proportion reported on the first day is 3\%, the actual number of deaths would be 133 for day one and 333 for day two.
 
@@ -72,12 +77,14 @@ If additionally, 60 deaths are reported during the second day to have happened d
 \chapter{Applying the model to COVID-19 in Sweden}
 We propose a Bayesian version of the removal model that assumes an overdispersed binomial distribution for the daily observations of deaths in Sweden in COVID-19. We then calculate the posterior distribution, prediction median and 95\% uncertainty intervals of the expected deaths from the reported deaths on each specific day. The method and algorithm is thoroughly described in the Supplementary Information.
 
-In Figure~\ref{fig:latest_prediction} we apply the model to the latest statistics from Sweden. The graph shows reported and predicted deaths (with uncertainty intervals) as bars and a dashed line plots the 7-day (centered) moving average. A version without predictions is used in the Public Health Agency´s daily press briefings. As expected, the model provides estimates of actual deaths considerably above the reported number of deaths.
+To get accurate estimates we apply two institution-specific corrections. First, we only count workdays as constituting reporting delay, as very few deaths are reported during weekends. Second, we apply a constant bias correction to account for the fact that Swedish deaths come from two distinct populations with different trends: deaths in hospitals, and in elderly care.
+
+In Figure~\ref{fig:latest_prediction} we apply the model to the latest statistics from Sweden. The graph shows reported and predicted deaths (with uncertainty intervals) as bars, and a dashed line plots the 7-day (centered) moving average. A version without predictions is used in the Public Health Agency´s daily press briefings. As expected, the model provides estimates of actual deaths considerably above the reported number of deaths.
 
 \begin{figure}
     \centering
     \includegraphics[width=0.9\textwidth]{../plots/latest_prediction}
-    \caption{Swedish Covid-19 deaths as of 2020-05-22 and model predictions}
+    \caption{Swedish Covid-19 deaths as of 2020-06-04 and model predictions}
     \label{fig:latest_prediction}
 \end{figure}
 
