--- a/output/paper/appendix.tex
+++ b/output/paper/appendix.tex
@@ -122,7 +122,7 @@ As confidence interval we simply use a Normal assumption with standard deviation
 \begin{figure}
     \centering
     \includegraphics[width=0.9\textwidth]{../plots/SCRPS_over_states}
-    \caption{Average SCRPS as the pandemic progresses.}
+    \caption{Average SCRPS as the pandemic progresses.w}
     \label{fig:SCRPS_states}
 \end{figure}
 
